# operations

./: .gitignore  README.md
operate_app/: App.original.tsx  App.simple.tsx  App.tsx  CODE_OPTIMIZATION_SUMMARY.md  DEVELOPMENT_GUIDE.md  FINAL_FIX.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  app.json  babel.config.js  design.md  metro.config.js  package.json  todo.md  tsconfig.json
operate_app/src/components/common/: ErrorBoundary.tsx  LoadingProvider.tsx  NotificationProvider.tsx
operate_app/src/components/ui/: Button.tsx
operate_app/src/navigation/: AuthNavigator.tsx  MainNavigator.tsx  RootNavigator.tsx  SimpleNavigator.tsx
operate_app/src/screens/: ErrorScreen.tsx  ExploreScreen.tsx  ModalScreen.tsx  OnboardingScreen.tsx  SplashScreen.tsx
operate_app/src/screens/alarm/: AlarmDetailsScreen.tsx  FaultAlarmScreen.tsx
operate_app/src/screens/auth/: ForgotPasswordScreen.tsx  LoginScreen.tsx  RegisterScreen.tsx  WelcomeScreen.tsx
operate_app/src/screens/home/: HomeScreen.tsx
operate_app/src/screens/profile/: ProfileScreen.tsx
operate_app/src/screens/resource/: ResourceDetailsScreen.tsx  ResourceManagementScreen.tsx
operate_app/src/screens/settings/: SettingsScreen.tsx
operate_app/src/screens/workorder/: CreateWorkOrderScreen.tsx  WorkOrderDetailsScreen.tsx  WorkOrderScreen.tsx
operate_app/src/services/: client.ts  index.ts
operate_app/src/services/api/: alarmApi.ts  authApi.ts  index.ts  userApi.ts
operate_app/src/store/: index.ts
operate_app/src/store/slices/: appSlice.ts  authSlice.ts  userSlice.ts
operate_app/src/theme/: colors.ts  index.ts  shadows.ts  spacing.ts  typography.ts
operate_app/src/types/: api.ts  common.ts  index.ts  navigation-theme.d.ts  navigation.ts
operate_app/src/utils/: constants.ts  errorHandler.ts  helpers.ts  index.ts  storage.ts
service/: Makefile  SETUP.md  alembic.ini  env.example  pyproject.toml  requirements.txt
service/alembic/: env.py
service/app/: __init__.py  main.py
service/app/api/: deps.py
service/app/api/v1/: __init__.py  api.py
service/app/api/v1/endpoints/: __init__.py  auth.py  demos.py  users.py
service/app/core/: config.py  response.py  security.py
service/app/crud/: __init__.py  base.py  crud_demo.py  crud_user.py
service/app/db/: base.py  session.py
service/app/models/: __init__.py  demo.py  user.py
service/app/schemas/: __init__.py  demo.py  user.py
service/app/services/: __init__.py  demo_service.py  user_service.py
service/scripts/: init_db.py  run_dev.py  test.py
service/tests/: __init__.py  conftest.py  test_auth.py  test_main.py
